package edu.hitsz.gameprops;

public interface PropsFactory {
    public BaseProps createProps(int locationX, int locationY, int speedX, int speedY);
}
